	- Move functions specific to the help browser to their own
	  source file, and adjust related variables accordingly.  New
	  file help.c; changes to help_init(), help_line_len(), and
	  do_help() (all moved to help.c). (DLR)
	- Tweak a few functions to remove the assumption that the file
	  always ends in a magicline.  Changes to do_cut_till_end(),
	  write_file(), and do_wordlinechar_count(). (DLR)
	- Tweak a few functions to rely on fileage and filebot instead
	  of NULL for their checks to detect the top or bottom of the
	  file.  Changes to cut_line(), cut_to_eol(), do_page_up(),
	  do_page_down(), do_para_end(), do_next_word(), do_prev_word(),
	  do_up(), do_down(), do_scroll_down(), do_right(), do_mouse(),
	  do_gotolinecolumn(), do_delete(), and find_paragraph(). (DLR)
- files.c:
  read_file()
	- Remove apparently unneeded logic to handle a case where
	  current is NULL, since it shouldn't be NULL there. (DLR)
- nano.h:
	- Readd MIN_EDITOR_COLS #define. (DLR)
- rcfile.c:
  do_rcfile()
	- Remove unneeded assert. (DLR)
- winio.c:
  nanoget_repaint()
	- Rename parameter inputbuf to buf, for consistency. (DLR)
  edit_add()
	- Rename to edit_draw(), and rename parameter yval to line.
	  (DLR)
  do_yesno()
	- Make mouse clicks on the Yes/No/All shortcuts work properly
	  when the MORE_SPACE flag is set. (DLR)
- doc/nano.texi:
	- Fix inconsistent wording. (DLR)
- doc/nanorc.sample:
	- Tweak the "c-file" regex for characters to properly accept
	  '\"' and reject '"' and '''. (DLR)
- src/Makefile.am:
	- Add help.c and prompt.c to nano_SOURCES. (DLR)

GNU nano 1.3.9 - 2005.10.23
- General:
	- Miscellaneous comment fixes. (DLR)
	- More int -> bool conversions. (DLR)
	- Fix a few last instances of the current line number's being
	  saved as an int instead of a ssize_t.  Changes to
	  renumber_all(), renumber(), do_alt_speller(), and
	  backup_lines(). (DLR)
	- Reorder some functions for consistency. (DLR)
	- Rename variable open_files openfile, for consistency. (DLR)